Fixes #84: Icon overlaps text in mobile menu

--- a/src/assets/stylesheets/layout/_nav.scss
+++ b/src/assets/stylesheets/layout/_nav.scss
@@ -289,7 +289,9 @@
         // Rotate icon
         &::after {
           position: absolute;
+          top: 50%;
           right: 1.2rem;
+          margin-top: -1.2rem;
           color: $md-color-black--light;
           font-size: 2.4rem;
         }
@@ -375,6 +377,7 @@
     // display the table of contents inside the drawer
     html &__link[for="toc"] {
       display: block;
+      padding-right: 4.8rem;
 
       // Unrotate icon for table of contents
       &::after {
